# fesslix

./: .gitignore  CMakeLists.txt  DEVELOPER_NOTE.md  README.md  linux_install_dependencies.sh  pyproject.toml  vcpkg.json  windows_install_dependencies.ps1
.github/: linux_build_nlopt.sh  linux_install_dependencies.sh  macOS_install_dependencies.sh  windows_install_dependencies.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test_module_load.yml
cmake/Modules/: FindARPACK.cmake
src/: .tools.py.kate-swp  config.h.in  flxVec.h  flxdefault.h  flxexception.h  flxglobal.h  flxglobaldef.h  flxio.h  flxmath.h  flxmath_interp.h  flxmath_rnd.h  model_templates.py  pdouble.cpp  pdouble.h  plot.py  python_interface.cpp  python_interface_core.cpp  ra_form.py  tools.py
src/core/: fesslix.cpp  fesslix.h  python_interface_core.cpp  python_interface_core.h
src/fesslix/: __init__.py
src/flxlib/: flxBayDA.cpp  flxBayDA.h  flxBayUp.cpp  flxBayUp.h  flxBayUp_obj.cpp  flxBayUp_obj.h  flxMemoryManager.cpp  flxMemoryManager.h  flxMtx.cpp  flxMtx.h  flxMtx_Eigen.cpp  flxMtx_Eigen.h  flxMtx_Eigen_ARP.cpp  flxMtx_Eigen_ARP.h  flxMtx_Eigen_GSL.cpp  flxMtx_Eigen_GSL.h  flxStatBox.cpp  flxStatBox.h  flxVec.cpp  flxVec.h  flxdata.cpp  flxdata.h  flxdefault.h  flxexception.cpp  flxexception.h  flxfunction.cpp  flxfunction.h  flxfunction_data.cpp  flxfunction_data.h  flxfunction_ext.cpp  flxfunction_ext.h  flxfunction_fun.cpp  flxfunction_fun.h  flxfunction_fun_calc.h  flxfunction_fun_read.h  flxfunction_ope.cpp  flxfunction_ope.h  flxfunction_ope_calc.h  flxfunction_ope_read.h  flxglobal.cpp  (+58 more)
src/gpr/: python_interface_gpr.cpp  python_interface_gpr.h
tests/: test_module_load.py
