[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fesslix"
version = "0.1.3"
description = "stochastic analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Wolfgang Betz", email = "w.betz@fesslix.org" }]
maintainers = [{ name = "Wolfgang Betz", email = "w.betz@fesslix.org" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
Homepage = "http://fesslix.org"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/fesslix/fesslix.git"
Issues = "https://github.com/fesslix/fesslix/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

[tool.cibuildwheel]
build = "cp312-* cp313-*"   # cp39-* cp310-* cp311-* cp312-*

[tool.cibuildwheel.environment]
CIBW_TEST_SKIP = "*-win_arm64"

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
before-all = [ "yum install -y gsl-devel boost-devel",
               "find /usr/include -type d -name boost",
               "find /usr -type f -name "BoostConfig.cmake""]
test-command = "echo 'installed gsl-devel boost-devel'"
environment = "Boost_INCLUDE_DIR=/usr/include"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add --no-cache gsl gsl-dev boost-dev"

[tool.cibuildwheel.windows]
archs = ["auto", "ARM64"]
before-build = "powershell -ExecutionPolicy Bypass -File windows_install_dependencies.ps1 & vcpkg integrate install"
#GSL_INCLUDE_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/include
#GSL_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/lib/gsl.lib
#GSL_CBLAS_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/lib/gslcblas.lib

[[tool.cibuildwheel.overrides]]
select ="*-win32*"
inherit.environment="append"
environment = "VCPKG_ROOT=D:/a/fesslix/fesslix/vcpkg CMAKE_TOOLCHAIN_FILE=D:/a/fesslix/fesslix/vcpkg/scripts/buildsystems/vcpkg.cmake PKG_CONFIG_PATH=D:/a/fesslix/fesslix/vcpkg/installed/x86-windows/lib/pkgconfig GSL_INCLUDE_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x86-windows/include GSL_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/x86-windows/lib/gsl.lib GSL_CBLAS_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/x86-windows/lib/gslcblas.lib Boost_INCLUDE_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/include Boost_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/share/boost"

[[tool.cibuildwheel.overrides]]
select ="*-win_amd64*"
inherit.environment="append"
environment = "VCPKG_ROOT=D:/a/fesslix/fesslix/vcpkg CMAKE_TOOLCHAIN_FILE=D:/a/fesslix/fesslix/vcpkg/scripts/buildsystems/vcpkg.cmake PKG_CONFIG_PATH=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/lib/pkgconfig GSL_INCLUDE_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/include GSL_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/lib/gsl.lib GSL_CBLAS_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/lib/gslcblas.lib Boost_INCLUDE_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/include Boost_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/share/boost"

[[tool.cibuildwheel.overrides]]
select ="*-win_arm64*"
inherit.environment="append"
environment = "VCPKG_ROOT=D:/a/fesslix/fesslix/vcpkg CMAKE_TOOLCHAIN_FILE=D:/a/fesslix/fesslix/vcpkg/scripts/buildsystems/vcpkg.cmake PKG_CONFIG_PATH=D:/a/fesslix/fesslix/vcpkg/installed/arm64-windows/lib/pkgconfig GSL_INCLUDE_DIR=D:/a/fesslix/fesslix/vcpkg/installed/arm64-windows/include GSL_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/arm64-windows/lib/gsl.lib GSL_CBLAS_LIBRARY=D:/a/fesslix/fesslix/vcpkg/installed/arm64-windows/lib/gslcblas.lib Boost_INCLUDE_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/include Boost_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows/share/boost"

#[[tool.cibuildwheel.overrides]]
## overrides for ARM64
#select ="*-win_arm64*"
#before-build = 'nuget install gsl-msvc14-arm64 -Source "%CD%\\vendor-binaries"'
## use local nuget package to install gsl on Windows ARM64, and manually supply paths
#inherit.environment = "append"
#environment = { CPATH="gsl-msvc14-arm64.2.3.0.2779\\\\build\\\\native\\\\include", LIBRARY_PATH="gsl-msvc14-arm64.2.3.0.2779\\\\build\\\\native\\\\lib" }

[tool.cibuildwheel.macos]
before-all = ["brew install gsl boost",
              "brew --prefix boost"]
archs = ["x86_64", "arm64"]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
inherit.environment="append"
environment = { MACOSX_DEPLOYMENT_TARGET="14.0" }
