[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fesslix"
version = "0.3.1"
description = "stochastic analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Wolfgang Betz", email = "w.betz@fesslix.org" }]
maintainers = [{ name = "Wolfgang Betz", email = "w.betz@fesslix.org" }]
dependencies = [ "pyyaml", "matplotlib", "numpy", "scipy" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
Homepage = "http://fesslix.org"
Documentation = "https://fesslix-docu.readthedocs.io/en/latest/intro.html"
Repository = "https://github.com/fesslix/fesslix.git"
Issues = "https://github.com/fesslix/fesslix/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"


[tool.cibuildwheel]
build = "cp312-* cp313-*"   # cp39-* cp310-* cp311-* cp312-*
build-verbosity = 1
test-skip = "*-win_arm64"

#################################################################################
# Linux
#################################################################################

[tool.cibuildwheel.linux]
archs = ["auto64", "aarch64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = [ #"yum install -y gsl-devel",
               "yum install -y curl zip unzip tar wget",
               #"yum install -y boost-devel",
               #"yum install -y curl epel-release",
               #"yum install python3-devel",
               "yum install -y ninja-build",
               "source ./.github/linux_install_dependencies.sh",
               "source ./.github/linux_build_nlopt.sh",
               ]
#before-build = [ "ls -la",
               #"[ ! -d vcpkg ] && git clone https://github.com/microsoft/vcpkg.git",
               #"cd vcpkg",
               #"./bootstrap-vcpkg.sh",
               #"./vcpkg install gsl",
               #"find ./ -name libgsl*",
               #"pwd",
               #"./vcpkg install boost-format boost-math boost-concept-check boost-random",
               #"./vcpkg integrate install",
               #"wget https://archives.boost.io/release/1.87.0/source/boost_1_87_0.tar.gz",
               #"tar -xvzf boost_1_87_0.tar.gz",
               #"cd boost_1_87_0",
               #"./bootstrap.sh",
               #"./b2 install",
               #"pwd",
               #"find ./ -type d -name boost",
               #"find ./ -type f -name 'special_functions.hpp'",
               #"find ./ -type f -name 'BoostConfig.cmake'"
#               ]
before-build = "python --version"
test-command = "echo 'installed gsl-devel boost-devel'"
environment = "Boost_skip_search=1 VCPKG_ROOT=/project/vcpkg/ NLOPT_INCLUDE_DIR=/project/nlopt/install/include/ NLOPT_LIBRARY=/project/nlopt/install/lib64/libnlopt.a"

[[tool.cibuildwheel.overrides]]
select ="*-manylinux_x86_64"
inherit.environment="append"
environment = "TRIPLET=x64-linux"

[[tool.cibuildwheel.overrides]]  ## TODO i686 support dropped ... delete this entry
select ="*-manylinux_i686"
inherit.environment="append"
environment = "TRIPLET=x86-linux"

[[tool.cibuildwheel.overrides]]
select ="*-manylinux_aarch64"
inherit.environment="append"
environment = "TRIPLET=arm64-linux"

# [[tool.cibuildwheel.overrides]]
# select ="*-musllinux_x86_64"
# inherit.environment="append"
# environment = "TRIPLET=x64-linux-musl"
#
# [[tool.cibuildwheel.overrides]]  ## TODO i686 support dropped ... delete this entry
# select ="*-musllinux_i686"
# inherit.environment="append"
# environment = "TRIPLET=x86-linux-musl"
#
# [[tool.cibuildwheel.overrides]]
# select ="*-musllinux_aarch64"
# inherit.environment="append"
# environment = "TRIPLET=arm64-linux-musl"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [ "apk add --no-cache gsl gsl-dev boost-dev",
               "source ./.github/linux_build_nlopt.sh",
               ]
## NOTE: do not run "source ./.github/linux_install_dependencies.sh"
##       musllinux does not officially support 'vcpkg'.
environment = "Boost_skip_search=1  NLOPT_INCLUDE_DIR=/project/nlopt/install/include/ NLOPT_LIBRARY=/project/nlopt/install/lib/libnlopt.a"


#################################################################################
# Windows
#################################################################################

[tool.cibuildwheel.windows]
archs = ["auto", "ARM64"]
before-build = "powershell -ExecutionPolicy Bypass -File .github/windows_install_dependencies.ps1 & vcpkg integrate install"
environment = "VCPKG_ROOT=D:/a/fesslix/fesslix/vcpkg/ CMAKE_TOOLCHAIN_FILE=D:/a/fesslix/fesslix/vcpkg/scripts/buildsystems/vcpkg.cmake"

[[tool.cibuildwheel.overrides]]
select ="*-win32*"
inherit.environment="append"
environment = "TRIPLET=x86-windows-static-md Boost_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows-static-md/share/boost"

[[tool.cibuildwheel.overrides]]
select ="*-win_amd64*"
inherit.environment="append"
environment = "TRIPLET=x64-windows-static-md Boost_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows-static-md/share/boost"

[[tool.cibuildwheel.overrides]]
select ="*-win_arm64*"
inherit.environment="append"
environment = "TRIPLET=arm64-windows-static-md Boost_DIR=D:/a/fesslix/fesslix/vcpkg/installed/x64-windows-static-md/share/boost"

#################################################################################
# macOS
#################################################################################

[tool.cibuildwheel.macos]
before-all= [ "brew install gsl boost",
              "brew --prefix boost",
              "ls -l $(brew --prefix gsl)/lib",  # list installed libgsl.*
              "source ./.github/macOS_install_dependencies.sh",
            ]
environment = "NLOPT_INCLUDE_DIR=/Users/runner/work/fesslix/fesslix/nlopt/install/include/ NLOPT_LIBRARY=/Users/runner/work/fesslix/fesslix/nlopt/install/lib/libnlopt.a"
#archs = ["x86_64", "arm64"]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
inherit.environment="append"
environment = { MACOSX_DEPLOYMENT_TARGET="14.0" }
archs = ["arm64"]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
inherit.environment="append"
environment = { MACOSX_DEPLOYMENT_TARGET="13.0" }
archs = ["x86_64"]
